<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondBackgroundCOlor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.timladenov.project_9_habittracker.MainActivity">

    <EditText
        android:id="@+id/date"
        android:layout_width="@dimen/editextheight"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_size"
        android:background="@color/ediTextColor"
        android:gravity="center|start"
        android:hint="@string/date"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/action"
        android:layout_width="@dimen/editextheight"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_size"
        android:background="@color/ediTextColor"
        android:gravity="center|start"
        android:hint="@string/action_taken"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/price"
        android:layout_width="@dimen/editextheight"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_size"
        android:background="@color/ediTextColor"
        android:gravity="center|start"
        android:hint="@string/price"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/service_name"
        android:layout_width="@dimen/editextheight"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_size"
        android:background="@color/ediTextColor"
        android:gravity="center|start"
        android:hint="@string/sertice_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/submit"
        android:layout_width="@dimen/editextheight"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <ScrollView
        android:id="@+id/db_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <TextView
            android:id="@+id/db_contains"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editextheight"
            android:layout_marginBottom="@dimen/text_size"
            android:background="@color/ediTextColor"
            android:gravity="center|start"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_size" />

    </ScrollView>

</LinearLayout>
